# nn-foundations-lab

./: README.md  experimentation.ipynb  pyproject.toml
micrograd/day01_follow-along/: experimentation.ipynb
micrograd/day02_implementation/: nn.py
micrograd/day03_testing/: exp.ipynb  pytorch_training.ipynb
micrograd/day2-implementation/: nn.py  test.py  value.py
